dnl * 
dnl * ------------------------------------------------------------------
dnl * configure.in - Configure script
dnl * Created by Robert Heller on Sat Aug  5 05:52:33 2006
dnl * ------------------------------------------------------------------
dnl * Modification History: $Log$
dnl * Modification History: Revision 1.44  2007/11/30 14:13:13  heller
dnl * Modification History: 11-30-2007 Lockdown
dnl * Modification History:
dnl * Modification History: Revision 1.43  2007/11/30 13:56:35  heller
dnl * Modification History: Novemeber 30, 2007 lockdown.
dnl * Modification History:
dnl * Modification History: Revision 1.42  2007/11/03 20:26:54  heller
dnl * Modification History: Release 2.1.11
dnl * Modification History:
dnl * Modification History: Revision 1.41  2007/10/22 17:17:26  heller
dnl * Modification History: 10222007
dnl * Modification History:
dnl * Modification History: Revision 1.40  2007/09/30 15:49:28  heller
dnl * Modification History: Rev 2.1.10 Lockdown
dnl * Modification History:
dnl * Modification History: Revision 1.39  2007/09/03 14:39:28  heller
dnl * Modification History: Rev 2.1.9 Lockdown
dnl * Modification History:
dnl * Modification History: Revision 1.38  2007/05/06 12:49:38  heller
dnl * Modification History: Lock down  for 2.1.8 release candidate 1
dnl * Modification History:
dnl * Modification History: Revision 1.37  2007/04/19 17:23:20  heller
dnl * Modification History: April 19 Lock Down
dnl * Modification History:
dnl * Modification History: Revision 1.36  2007/02/21 20:48:37  heller
dnl * Modification History: SWIG Hackery
dnl * Modification History:
dnl * Modification History: Revision 1.35  2007/02/21 20:08:55  heller
dnl * Modification History: SWIG Hackery
dnl * Modification History:
dnl * Modification History: Revision 1.31  2007/02/01 20:38:25  heller
dnl * Modification History: Lock down for Release 2.1.7
dnl * Modification History:
dnl * Modification History: Revision 1.29  2007/01/08 23:19:21  heller
dnl * Modification History: Win32 build
dnl * Modification History:
dnl * Modification History: Revision 1.27  2007/01/08 20:11:32  heller
dnl * Modification History: Cross Compile Hacks
dnl * Modification History:
dnl * Modification History: Revision 1.26  2007/01/08 19:05:53  heller
dnl * Modification History: Jan 8, 2007 Lockdown
dnl * Modification History:
dnl * Modification History: Revision 1.1  2002/07/28 14:03:50  heller
dnl * Modification History: Add it copyright notice headers
dnl * Modification History:
dnl * ------------------------------------------------------------------
dnl * Contents:
dnl * ------------------------------------------------------------------
dnl *  
dnl *     Model RR System, Version 2
dnl *     Copyright (C) 1994,1995,2002-2005  Robert Heller D/B/A Deepwoods Software
dnl * 			51 Locke Hill Road
dnl * 			Wendell, MA 01379-9728
dnl * 
dnl *     This program is free software; you can redistribute it and/or modify
dnl *     it under the terms of the GNU General Public License as published by
dnl *     the Free Software Foundation; either version 2 of the License, or
dnl *     (at your option) any later version.
dnl * 
dnl *     This program is distributed in the hope that it will be useful,
dnl *     but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl *     GNU General Public License for more details.
dnl * 
dnl *     You should have received a copy of the GNU General Public License
dnl *     along with this program; if not, write to the Free Software
dnl *     Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
dnl * 
dnl *  
dnl * 

AC_INIT()

MRR_VERSION=2.1
AC_DEFINE_UNQUOTED([MRR_VERSION],$MRR_VERSION,[MRR Version])
MRR_MAJOR_VERSION=2
AC_DEFINE_UNQUOTED([MRR_MAJOR_VERSION],$MRR_MAJOR_VERSION,[MRR Major])
MRR_MINOR_VERSION=1
AC_DEFINE_UNQUOTED([MRR_MINOR_VERSION],$MRR_MINOR_VERSION,[MRR Minor])
MRR_PATCH_LEVEL="2.1.13"
AC_DEFINE_UNQUOTED([MRR_PATCH_LEVEL],$MRR_PATCH_LEVEL,[MRR Patch Level])
MRR_PATCH_LEVELLIB=2.1.13
AC_SUBST(MRR_PATCH_LEVELLIB)
AC_SUBST(MRR_PATCH_LEVEL)
AC_SUBST(MRR_VERSION)
AC_SUBST(MRR_MAJOR_VERSION)
AC_SUBST(MRR_MINOR_VERSION)
AM_INIT_AUTOMAKE(MRRSystem, $MRR_PATCH_LEVELLIB )

AC_DEFINE([CMRI_VERSION],["1.0.0"],[CMRI Version])
CMRI_VERSIONLIB=1.0.0
AC_SUBST(CMRI_VERSIONLIB)
AC_DEFINE([XPRESSNET_VERSION],["1.0.0"],[XPressNet Version])
XPRESSNET_VERSIONLIB=1.0.0
AC_SUBST(XPRESSNET_VERSIONLIB)
AC_DEFINE([FCFCLASSES_VERSION],["1.0.4"],[FCF Classes Version])
FCFCLASSES_VERSIONLIB=1.0.4
AC_SUBST(FCFCLASSES_VERSIONLIB)
AC_DEFINE([TTCLASSES_VERSION],["1.0.2"],[TT Classes Version])
TTCLASSES_VERSIONLIB=1.0.2
AC_SUBST(TTCLASSES_VERSIONLIB)



if test "x${prefix}" = "xNONE"; then
    prefix=/usr/local
fi
if test "x${exec_prefix}" = "xNONE"; then
    exec_prefix="${prefix}"
fi

BUILD_DIR=`pwd`
TOP_DIR=${BUILD_DIR}

AC_SUBST(TOP_DIR)
AC_SUBST(BUILD_DIR)

dnl Checks for programs.

AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CC
dnl if test ${cross_compiling} = "no"; then
dnl   AM_DISABLE_STATIC
dnl fi
AC_LIBTOOL_DLOPEN
if test ${cross_compiling} = "yes"; then
  lt_cv_deplibs_check_method='pass_all'
fi
AM_PROG_LIBTOOL
AC_PATH_PROG(PDFLATEX,pdflatex,/bin/true)
AC_PATH_PROGS(HTLATEX,[htlatex htlatex.sh],/bin/true)
AC_PATH_PROG(LATEX,latex,/bin/true)
AC_PATH_PROG(MAKEINDEX,makeindex,/bin/true)
AC_PATH_PROG(BIBTEX,bibtex,/bin/true)
AC_PATH_PROG(DVIPS,dvips,/bin/true)
AC_PATH_PROG(PS2PDF,ps2pdf,/bin/true)
AC_PATH_PROG(DOCXX,doc++,/bin/true)
AC_PATH_PROG(SWIG,swig,/bin/true)
AC_MSG_CHECKING([Checking Swig version])
  $SWIG -version >/dev/null 2> /tmp/swig_version$pid
  SWIGVERSION=`cat /tmp/swig_version$pid | grep Version | awk '{print $3}'`
  rm /tmp/swig_version$pid
  AC_SUBST(SWIGVERSION)
  AC_MSG_RESULT([SWIG Version is $SWIGVERSION])
  SWIGVERSIONMAJOR=`echo $SWIGVERSION|awk -F. '{print $1}'`
  AC_SUBST(SWIGVERSIONMAJOR)
  AC_MSG_RESULT([SWIG Major version is $SWIGVERSIONMAJOR])
  SWIGVERSIONMINOR=`echo $SWIGVERSION|awk -F. '{print $2}'`
  AC_SUBST(SWIGVERSIONMINOR)
  AC_MSG_RESULT([SWIG Minor version is $SWIGVERSIONMINOR])
  if test ${SWIGVERSIONMINOR} == 1 && test ${SWIGVERSIONMAJOR} == 1; then
    AC_MSG_ERROR([Your version of SWIG is old, you need to upgrade to 1.3!])
  else
    SWIGVERSIONFLAGS="-DSWIGVERSION=\$(SWIGVERSION) -DSWIGVERSIONMAJOR=\$(SWIGVERSIONMAJOR) \
-DSWIGVERSIONMINOR=\$(SWIGVERSIONMINOR)"
  fi
  AC_SUBST(SWIGVERSIONFLAGS)
AC_PATH_PROG(BISONXX,bison++,/bin/true)

AM_CONDITIONAL(DONT_HAVE_BISONXX,test $BISONXX = /bin/true)
dnl Checks for libraries.

AC_CHECK_LIB(usb,usb_init, [USBLIBS="-lusb"], [USBLIBS=""])
AC_SUBST(USBLIBS)
AC_CHECK_HEADERS(usb.h,[USBDEFS="-DHAVE_USB_H=1"],[USBDEFS=""])
AC_SUBST(USBDEFS)

AM_CONDITIONAL(DONT_HAVE_USB,test x$USBDEFS = "x")
AM_CONDITIONAL(CROSSCOMPILING,test ${cross_compiling} = "yes")
if test ${cross_compiling} = "yes"; then
  LIB_MRR_PATCH_LEVELLIB=`echo $MRR_PATCH_LEVELLIB|sed 's/\./-/g'`
  CMRI_LIB_VERSIONLIB=`echo $CMRI_VERSIONLIB|sed 's/\./-/g'`
  XPRESSNET_LIB_VERSIONLIB=`echo $XPRESSNET_VERSIONLIB|sed 's/\./-/g'`
  FCFCLASSES_LIB_VERSIONLIB=`echo $FCFCLASSES_VERSIONLIB|sed 's/\./-/g'`
  TTCLASSES_LIB_VERSIONLIB=`echo $TTCLASSES_VERSIONLIB|sed 's/\./-/g'`
else
  LIB_MRR_PATCH_LEVELLIB=$MRR_PATCH_LEVELLIB
  CMRI_LIB_VERSIONLIB=$CMRI_VERSIONLIB
  XPRESSNET_LIB_VERSIONLIB=$XPRESSNET_VERSIONLIB
  FCFCLASSES_LIB_VERSIONLIB=$FCFCLASSES_VERSIONLIB
  TTCLASSES_LIB_VERSIONLIB=$TTCLASSES_VERSIONLIB
fi
AC_SUBST(LIB_MRR_PATCH_LEVELLIB)
AC_SUBST(CMRI_LIB_VERSIONLIB)
AC_SUBST(XPRESSNET_LIB_VERSIONLIB)
AC_SUBST(FCFCLASSES_LIB_VERSIONLIB)
AC_SUBST(TTCLASSES_LIB_VERSIONLIB)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/ioctl.h sys/time.h syslog.h unistd.h sys/select.h)

AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int)
AC_MSG_CHECKING([bool])
AC_LANG_SAVE
AC_LANG_CPLUSPLUS
AC_TRY_COMPILE(,[bool x,y;
x = true;
y = false;],[AC_DEFINE([HAVE_BOOL],[1],[Has bool])
	     AC_MSG_RESULT(yes)],AC_MSG_RESULT(no))
AC_LANG_RESTORE

AC_MSG_CHECKING([stdc++])
AC_LANG_SAVE
AC_LANG_CPLUSPLUS
savedLibs=$LIBS
LIBS=-lstdc++
AC_TRY_LINK([
#include <iostream.h>
],[
	cout << endl;
],[STDCXXLIBS="-lstdc++"
  AC_MSG_RESULT(yes)],[STDCXXLIBS=""
  AC_MSG_RESULT(no)])
AC_SUBST(STDCXXLIBS)
LIBS=$savedLibs
AC_LANG_RESTORE


dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_TYPE_SIGNAL
if test ${cross_compiling} = "no"; then
  AC_CHECK_LIB(m,cos)
fi
AC_CHECK_FUNCS(gethostname gettimeofday regcomp select socket)
AC_CHECK_FUNCS(strerror strstr cos sin socketpair)
AC_REPLACE_FUNCS(mkstemp localtime_r asctime_r)

AC_MSG_CHECKING(tcl build dir)
TCL_LIB_DIR=$exec_prefix/lib
dirs="${BUILD_DIR}/../tcl8.3a*/unix \
	${BUILD_DIR}/../tcl8.3b*/unix \
	${BUILD_DIR}/../tcl8.4.*/unix \
	${BUILD_DIR}/../tcl8.5.*/unix \
	/usr/share /usr/lib"
for i in $dirs ; do
    if test -d "$i" -a -f "$i/tclConfig.sh"; then
	TCL_LIB_DIR=`cd $i; pwd`
    fi
done
AC_ARG_WITH(tcl, [  --with-tcl=DIR          use Tcl binaries from DIR], TCL_LIB_DIR=$withval,)
if test -d $TCL_LIB_DIR; then
    AC_MSG_RESULT([using tcl library in $TCL_LIB_DIR])
else
    AC_MSG_ERROR(Tcl directory $TCL_LIB_DIR doesn't exist)
fi

cd ${TCL_LIB_DIR}/..
TCL_TOP_DIR=`pwd`
cd ${BUILD_DIR}

#--------------------------------------------------------------------

file=$TCL_LIB_DIR/tclConfig.sh
. $file
SHLIB_CFLAGS=`echo "$TCL_SHLIB_CFLAGS" |sed -e "s|PIC|pic|" -e "s|+Z|+z|"`
SHLIB_LD=`echo $TCL_SHLIB_LD|sed "s/-Wl,-soname,libtcl.so.0//g"`
SHLIB_SUFFIX=$TCL_SHLIB_SUFFIX
DL_LIBS=$TCL_DL_LIBS
LD_FLAGS=$TCL_LD_FLAGS

TCL_BASE=`echo ${TCL_LIB_SPEC} |sed -e "s|^.*-l||"`
TCL_STUB_BASE=`echo ${TCL_STUB_LIB_SPEC} |sed -e "s|^.*-l||"`

AC_SUBST(TCL_LIB_DIR)
if test -f ${TCL_LIB_DIR}/tclsh${TCL_VERSION}; then
    TCL_BIN_DIR=${TCL_LIB_DIR}
elif test -f ${TCL_EXEC_PREFIX}/bin/tclsh${TCL_VERSION}; then
    TCL_BIN_DIR=${TCL_EXEC_PREFIX}/bin
elif test -f ${TCL_EXEC_PREFIX}/tclsh; then
    TCL_BIN_DIR=${TCL_EXEC_PREFIX}
elif test -f ${TCL_EXEC_PREFIX}/bin/tclsh; then
    TCL_BIN_DIR=${TCL_EXEC_PREFIX}/bin
else
    TCL_BIN_DIR=$exec_prefix/bin
fi
AC_SUBST(TCL_BIN_DIR)
if test -f ${TCL_BIN_DIR}/tclsh${TCL_VERSION}; then
    TCLSH=${TCL_BIN_DIR}/tclsh${TCL_VERSION}
else
    TCLSH=${TCL_BIN_DIR}/tclsh
fi
AC_SUBST(TCLSH)
if test -f ${TCL_BIN_DIR}/wish${TCL_VERSION}; then
    WISH=${TCL_BIN_DIR}/wish${TCL_VERSION}
else
    WISH=${TCL_BIN_DIR}/wish
fi
AC_SUBST(WISH)
if test -d ${TCL_TOP_DIR}/generic -a -f ${TCL_TOP_DIR}/generic/tcl.h; then
    TCL_INC_DIR=${TCL_TOP_DIR}/generic
elif test -d ${TCL_TOP_DIR}/include -a -f ${TCL_TOP_DIR}/include/tcl.h; then
    TCL_INC_DIR=${TCL_TOP_DIR}/include
elif test -d ${TCL_TOP_DIR}/include -a -f ${TCL_TOP_DIR}/include/tcl.h; then
    TCL_INC_DIR=${TCL_TOP_DIR}/include
elif test -d ${TCL_EXEC_PREFIX}/include -a -f ${TCL_EXEC_PREFIX}/include/tcl.h; then
    TCL_INC_DIR=${TCL_EXEC_PREFIX}/include
elif test -d ${TCL_EXEC_PREFIX}/include -a -f ${TCL_EXEC_PREFIX}/include/tcl.h; then
    TCL_INC_DIR=${TCL_EXEC_PREFIX}/include
else
    TCL_INC_DIR=$prefix/include
fi
AC_SUBST(TCL_INC_DIR)
if test -d ${TCL_TOP_DIR}/lib/tcl${TCL_VERSION} -a -f ${TCL_TOP_DIR}/lib/tcl${TCL_VERSION}/init.tcl; then
    TCL_LIBRARY=${TCL_TOP_DIR}/lib/tcl${TCL_VERSION}
elif test -d ${TCL_TOP_DIR}/lib/tcl${TCL_VERSION} -a -f ${TCL_TOP_DIR}/lib/tcl${TCL_VERSION}/init.tcl; then
    TCL_LIBRARY=${TCL_TOP_DIR}/lib/tcl${TCL_VERSION}
elif test -d ${TCL_TOP_DIR}/library -a -f ${TCL_TOP_DIR}/library/init.tcl; then
    TCL_LIBRARY=${TCL_TOP_DIR}/library
elif test -d ${TCL_PREFIX}/lib/tcl${TCL_VERSION} -a -f ${TCL_PREFIX}/lib/tcl${TCL_VERSION}/init.tcl; then
    TCL_LIBRARY=${TCL_PREFIX}/lib/tcl${TCL_VERSION}
elif test -d ${TCL_PREFIX}/lib/tcl${TCL_VERSION} -a -f ${TCL_PREFIX}/lib/tcl${TCL_VERSION}/init.tcl; then
    TCL_LIBRARY=${TCL_PREFIX}/lib/tcl${TCL_VERSION}
else
    TCL_LIBRARY=$prefix/lib/tcl${TCL_VERSION}
fi
AC_SUBST(TCL_LIBRARY)

TCL_LIB_SPEC="-L${TCL_LIB_DIR} -l${TCL_BASE}"
TCL_STUB_LIB_SPEC="-L${TCL_LIB_DIR} -l${TCL_STUB_BASE}"
eval "TCL_UNSHARED_LIB_FILE=lib${TCL_BASE}${TCL_UNSHARED_LIB_SUFFIX}"
eval "TCL_SHARED_LIB_FILE=lib${TCL_BASE}${TCL_SHARED_LIB_SUFFIX}"

#--------------------------------------------------------------------
LIB_INSTALL_DIR="${LIB_RUNTIME_DIR}"
#--------------------------------------------------------------------
#	The statements below define a collection of symbols related to
#	building libimg as a shared library instead of a static library.
#--------------------------------------------------------------------

TCL_SHARED_LIBS=""
#--------------------------------------------------------------------
AC_ARG_ENABLE(stubs, [  --disable-stubs         disable stub support for Img],
    [img_ok=$enableval], [img_ok=yes])
if test "$img_ok" != "no"; then
    TCL_DEFS="$TCL_DEFS -DUSE_TCL_STUBS"
    TCL_SHARED_LIBS="${TCL_STUB_LIB_SPEC}"
else
    case "$SHLIB_LD" in
	*ldAix*)
	TCL_SHARED_LIBS='${TCL_LIB_SPEC}'
	;;
    esac
fi

case "$SHLIB_LD" in
    *ldAix*)
    TCL_SHARED_LIBS="${TCL_SHARED_LIBS}"
    ;;
esac

AC_MSG_CHECKING(bwidget dir)
if test ${cross_compiling} = "no"; then
  BWLIB=`echo 'puts $tcl_library'|${TCLSH}`
else
  BWLIB=$TCL_LIBRARY
fi
dirs="${TCL_PREFIX}/lib/bwidget* ${TCL_PREFIX}/lib/tcllib*/bwidget* ${BWLIB}/bwidget* ${BWLIB}/../tcllib*/bwidget* ${BWLIB}/../bwidget* ${BWLIB}/tcllib*/bwidget*"
for i in $dirs ; do
  if test -d "$i" -a -f "$i/pkgIndex.tcl"; then
    BWLIB=`cd $i; pwd`
  fi
done
AC_ARG_WITH(bwlib, [  --with-bwlib=DIR          use BWidget from DIR], BWLIB=$withval,)
if test -d $BWLIB; then
   AC_MSG_RESULT([using BWidget library in $BWLIB])
else
   AC_MSG_ERROR(BWidget library directory $BWLIB doesn't exist)
fi
AC_SUBST(BWLIB)

AC_MSG_CHECKING(snit dir)
if test ${cross_compiling} = "no"; then
  SNITLIB=`echo 'puts $tcl_library'|${TCLSH}`
else
  SNITLIB=$TCL_LIBRARY
fi
dirs="${TCL_PREFIX}/lib/snit* ${TCL_PREFIX}/lib/tcllib*/snit* ${SNITLIB}/../tcllib*/snit* ${SNITLIB}/../snit* ${SNITLIB}/tcllib*/snit* ${SNITLIB}/snit*"
for i in $dirs ; do
  if test -d "$i" -a -f "$i/pkgIndex.tcl"; then
    SNITLIB=`cd $i; pwd`
  fi
done
AC_ARG_WITH(snitlib, [  --with-snitlib=DIR          use snit from DIR], SNITLIB=$withval,)
if test -d $SNITLIB; then
   AC_MSG_RESULT([using snit library in $SNITLIB])
else
   AC_MSG_ERROR(Snit library directory $SNITLIB doesn't exist)
fi
AC_SUBST(SNITLIB)

AC_PATH_PROGS(SDX,[sdx sdx.kit])
AC_PATH_PROGS(TCLKIT,tclkit)
TCLKITRUN="${TCL_EXEC_PREFIX}/bin/tclkit$EXEEXT"
AC_ARG_WITH(tclkitrun, [  --with-tclkitrun=filename	use tclkit runtime in filename], TCLKITRUN=$withval,)
if test -x $TCLKITRUN;  then
   AC_MSG_RESULT([using tclkit runtime $TCLKITRUN])
else
   AC_MSG_ERROR([Can't find tclkit, please use --with-tclkitrun to set the tclkit])
fi
AC_SUBST(TCLKITRUN)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/ioctl.h sys/time.h syslog.h unistd.h sys/select.h)

AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int)
AC_MSG_CHECKING([bool])
AC_LANG_SAVE
AC_LANG_CPLUSPLUS
AC_TRY_COMPILE(,[bool x,y;
x = true;
y = false;],[AC_DEFINE([HAVE_BOOL],[1],[Has bool])
	     AC_MSG_RESULT(yes)],AC_MSG_RESULT(no))
AC_LANG_RESTORE

AC_MSG_CHECKING([stdc++])
AC_LANG_SAVE
AC_LANG_CPLUSPLUS
savedLibs=$LIBS
LIBS=-lstdc++
AC_TRY_LINK([
#include <iostream.h>
],[
	cout << endl;
],[STDCXXLIBS="-lstdc++"
  AC_MSG_RESULT(yes)],[STDCXXLIBS=""
  AC_MSG_RESULT(no)])
AC_SUBST(STDCXXLIBS)
LIBS=$savedLibs
AC_LANG_RESTORE


dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_TYPE_SIGNAL


dnl Substitutions...

AC_SUBST(CXX)
AC_SUBST(CXXFLAGS)
AC_SUBST(SHLIB_CFLAGS)
AC_SUBST(SHLIB_CXXFLAGS)
SHLIB_LD=`echo $SHLIB_LD|sed -e "s/${TCL_CC}/${CXX}/g"`
AC_SUBST(SHLIB_LD)
SHLIB_LD_LIBS=$TCL_SHLIB_LD_LIBS
AC_SUBST(SHLIB_LD_LIBS)
AC_SUBST(SHLIB_SUFFIX)
AC_SUBST(TCL_DBGX)
AC_SUBST(TCL_VERSION)
AC_SUBST(TCL_DEFS)
AC_SUBST(TCL_LIBS)
AC_SUBST(TCL_STUB_LIB_SPEC)
AC_SUBST(TCL_STUB_LIB_PATH)
AC_SUBST(TCL_SHARED_LIBS)
AC_SUBST(TCL_SHARED_LIB_FILE)
AC_SUBST(TCL_UNSHARED_LIB_FILE)
AC_SUBST(TCL_SHLIB_CFLAGS)
AC_SUBST(TCL_SHLIB_SUFFIX)
TCL_SHLIB_LD=`echo $TCL_SHLIB_LD|sed -e "s/${TCL_CC}/${CXX}/g"`
AC_SUBST(TCL_SHLIB_LD)
AC_SUBST(TCL_PREFIX)
AC_SUBST(TCL_EXEC_PREFIX)
AC_SUBST(TCL_CFLAGS)
AC_SUBST(TCL_LIB_SPEC)
SYSTEMVERSION="$MRR_PATCH_LEVEL"
AC_SUBST(SYSTEMVERSION)




AC_OUTPUT(config_tcl.sed \
	  Makefile \
	  BuildScripts/Makefile \
	  C++/Makefile \
		C++/RailDriver/Makefile \
		C++/ParserClasses/Makefile \
		C++/TTSupport/Makefile \
		C++/FCFSupport/Makefile \
		C++/CMri/Makefile \
		C++/XPressNet/Makefile \
	  Help/Makefile \
		Help/FreightCarForwarder2/Makefile \
		Help/TimeTable2/Makefile \
		Help/CalcScripts/Makefile \
		Help/CameraScripts/Makefile \
		Help/UniversalTest/Makefile \
	  Scripts/Makefile \
		Scripts/Common/Makefile \
		Scripts/GRSupport/Makefile \
		Scripts/Dispatcher/Makefile \
		Scripts/CameraScripts/Makefile \
		Scripts/FreightCarForwarder/Makefile \
		Scripts/TimeTable/Makefile \
		Scripts/CalcScripts/Makefile \
		Scripts/FreightCarForwarder2/Makefile \
		Scripts/FreightCarForwarder2/NorthAmerican/Makefile \
		Scripts/TimeTable2/Makefile \
		Scripts/ControlSupport/Makefile \
		Scripts/MainProgram/Makefile \
	  Doc/Makefile \
		Doc/Support/Makefile \
		Doc/User/Makefile \
		Doc/Internals/Makefile \
		Doc/ProgrammingGuides/Makefile \
	  ManPages/Makefile \
		ManPages/C++API/Makefile \
		ManPages/TclAPI/Makefile \
		ManPages/Daemons/Makefile \
		ManPages/Programs/Makefile \
	  Installer/Makefile \
	  Lib/Makefile \
	  )


