dnl * 
dnl * ------------------------------------------------------------------
dnl * configure.in - 
dnl * Created by Robert Heller on Sun Jul 28 09:40:25 2002
dnl * ------------------------------------------------------------------
dnl * Modification History: $Log$
dnl * Modification History: Revision 1.8  2004/06/26 13:31:08  heller
dnl * Modification History: Update versioning for new release
dnl * Modification History:
dnl * Modification History: Revision 1.7  2004/04/17 16:54:24  heller
dnl * Modification History: Add sed edit file for configuring Tcl/Tk scripts.
dnl * Modification History:
dnl * Modification History: Revision 1.6  2004/04/14 23:16:31  heller
dnl * Modification History: Fixed shared lib linking.
dnl * Modification History:
dnl * Modification History: Revision 1.5  2002/11/10 14:27:05  heller
dnl * Modification History: Updated for Time Table files
dnl * Modification History:
dnl * Modification History: Revision 1.4  2002/07/28 14:03:50  heller
dnl * Modification History: Add it copyright notice headers
dnl * Modification History:
dnl * ------------------------------------------------------------------
dnl * Contents:
dnl * ------------------------------------------------------------------
dnl *  
dnl *     Model RR System, Version 2
dnl *     Copyright (C) 1994,1995,2002  Robert Heller D/B/A Deepwoods Software
dnl * 			51 Locke Hill Road
dnl * 			Wendell, MA 01379-9728
dnl * 
dnl *     This program is free software; you can redistribute it and/or modify
dnl *     it under the terms of the GNU General Public License as published by
dnl *     the Free Software Foundation; either version 2 of the License, or
dnl *     (at your option) any later version.
dnl * 
dnl *     This program is distributed in the hope that it will be useful,
dnl *     but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl *     GNU General Public License for more details.
dnl * 
dnl *     You should have received a copy of the GNU General Public License
dnl *     along with this program; if not, write to the Free Software
dnl *     Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
dnl * 
dnl *  
dnl * 
dnl Process this file with autoconf to produce a configure script.
AC_INIT()

dnl Checks for programs.

MRR_VERSION=2.0
AC_DEFINE_UNQUOTED(MRR_VERSION,${MRR_VERSION})
MRR_MAJOR_VERSION=2
AC_DEFINE_UNQUOTED(MRR_MAJOR_VERSION,${MRR_MAJOR_VERSION})
MRR_MINOR_VERSION=0
AC_DEFINE_UNQUOTED(MRR_MINOR_VERSION,${MRR_MINOR_VERSION})
MRR_PATCH_LEVEL="2.0.1"
AC_DEFINE_UNQUOTED(MRR_PATCH_LEVEL,"${MRR_PATCH_LEVEL}")
VERSION=${MRR_VERSION}

CMRI_VERSION="1.0"
AC_DEFINE_UNQUOTED(CMRI_VERSION,"${CMRI_VERSION}")


if test "x${prefix}" = "xNONE"; then
    prefix=/usr/local
fi
if test "x${exec_prefix}" = "xNONE"; then
    exec_prefix="${prefix}"
fi

AC_SUBST(MRR_VERSION)
AC_SUBST(MRR_PATCH_LEVEL)
AC_SUBST(MRR_MAJOR_VERSION)
AC_SUBST(MRR_MINOR_VERSION)



BUILD_DIR=`pwd`
TOP_DIR=${BUILD_DIR}

AC_SUBST(TOP_DIR)
AC_SUBST(BUILD_DIR)

#--------------------------------------------------------------------
#	Read in configuration information generated by Tcl for shared
#	libraries, and arrange for it to be substituted into our
#	Makefile.
#--------------------------------------------------------------------

AC_MSG_CHECKING(tcl build dir)
TCL_LIB_DIR=$exec_prefix/lib
dirs="${BUILD_DIR}/../tcl8.0/unix \
	${BUILD_DIR}/../tcl8.0.3/unix \
	${BUILD_DIR}/../tcl8.0.4/unix \
	${BUILD_DIR}/../tcl8.0.5/unix \
	${BUILD_DIR}/../tcl8.0.6/unix \
	${BUILD_DIR}/../tcl8.1/unix \
	${BUILD_DIR}/../tcl8.1.*/unix \
	${BUILD_DIR}/../tcl8.2.*/unix \
	${BUILD_DIR}/../tcl8.3a*/unix \
	${BUILD_DIR}/../tcl8.3b*/unix \
	${BUILD_DIR}/../tcl8.3.*/unix \
	/usr/lib"
for i in $dirs ; do
    if test -d "$i" -a -f "$i/tclConfig.sh"; then
	TCL_LIB_DIR=`cd $i; pwd`
    fi
done
AC_ARG_WITH(tcl, [  --with-tcl=DIR          use Tcl binaries from DIR], TCL_LIB_DIR=$withval,)
if test -d $TCL_LIB_DIR; then
    AC_MSG_RESULT([using tcl library in $TCL_LIB_DIR])
else
    AC_MSG_ERROR(Tcl directory $TCL_LIB_DIR doesn't exist)
fi

cd ${TCL_LIB_DIR}/..
TCL_TOP_DIR=`pwd`
cd ${BUILD_DIR}

#--------------------------------------------------------------------

file=$TCL_LIB_DIR/tclConfig.sh
. $file
CC=$TCL_CC
CXX=$TCL_CXX
SHLIB_CFLAGS=`echo "$TCL_SHLIB_CFLAGS" |sed -e "s|PIC|pic|" -e "s|+Z|+z|"`
SHLIB_LD=`echo $TCL_SHLIB_LD|sed "s/-Wl,-soname,libtcl.so.0//g"`
SHLIB_SUFFIX=$TCL_SHLIB_SUFFIX
DL_LIBS=$TCL_DL_LIBS
LD_FLAGS=$TCL_LD_FLAGS

TCL_BASE=`echo ${TCL_LIB_SPEC} |sed -e "s|^.*-l||"`
TCL_STUB_BASE=`echo ${TCL_STUB_LIB_SPEC} |sed -e "s|^.*-l||"`

AC_SUBST(TCL_LIB_DIR)
if test -f ${TCL_LIB_DIR}/tclsh${TCL_VERSION}; then
    TCL_BIN_DIR=${TCL_LIB_DIR}
elif test -f ${TCL_EXEC_PREFIX}/bin/tclsh${TCL_VERSION}; then
    TCL_BIN_DIR=${TCL_EXEC_PREFIX}/bin
elif test -f ${TCL_EXEC_PREFIX}/tclsh; then
    TCL_BIN_DIR=${TCL_EXEC_PREFIX}
elif test -f ${TCL_EXEC_PREFIX}/bin/tclsh; then
    TCL_BIN_DIR=${TCL_EXEC_PREFIX}/bin
else
    TCL_BIN_DIR=$exec_prefix/bin
fi
AC_SUBST(TCL_BIN_DIR)
if test -f ${TCL_BIN_DIR}/tclsh${TCL_VERSION}; then
    TCLSH=${TCL_BIN_DIR}/tclsh${TCL_VERSION}
else
    TCLSH=${TCL_BIN_DIR}/tclsh
fi
AC_SUBST(TCLSH)
if test -f ${TCL_BIN_DIR}/wish${TCL_VERSION}; then
    WISH=${TCL_BIN_DIR}/wish${TCL_VERSION}
else
    WISH=${TCL_BIN_DIR}/wish
fi
AC_SUBST(WISH)
if test -d ${TCL_TOP_DIR}/generic -a -f ${TCL_TOP_DIR}/generic/tcl.h; then
    TCL_INC_DIR=${TCL_TOP_DIR}/generic
elif test -d ${TCL_TOP_DIR}/include -a -f ${TCL_TOP_DIR}/include/tcl.h; then
    TCL_INC_DIR=${TCL_TOP_DIR}/include
elif test -d ${TCL_TOP_DIR}/include -a -f ${TCL_TOP_DIR}/include/tcl.h; then
    TCL_INC_DIR=${TCL_TOP_DIR}/include
elif test -d ${TCL_EXEC_PREFIX}/include -a -f ${TCL_EXEC_PREFIX}/include/tcl.h; then
    TCL_INC_DIR=${TCL_EXEC_PREFIX}/include
elif test -d ${TCL_EXEC_PREFIX}/include -a -f ${TCL_EXEC_PREFIX}/include/tcl.h; then
    TCL_INC_DIR=${TCL_EXEC_PREFIX}/include
else
    TCL_INC_DIR=$prefix/include
fi
AC_SUBST(TCL_INC_DIR)
if test -d ${TCL_TOP_DIR}/lib/tcl${TCL_VERSION} -a -f ${TCL_TOP_DIR}/lib/tcl${TCL_VERSION}/init.tcl; then
    TCL_LIBRARY=${TCL_TOP_DIR}/lib/tcl${TCL_VERSION}
elif test -d ${TCL_TOP_DIR}/lib/tcl${TCL_VERSION} -a -f ${TCL_TOP_DIR}/lib/tcl${TCL_VERSION}/init.tcl; then
    TCL_LIBRARY=${TCL_TOP_DIR}/lib/tcl${TCL_VERSION}
elif test -d ${TCL_TOP_DIR}/library -a -f ${TCL_TOP_DIR}/library/init.tcl; then
    TCL_LIBRARY=${TCL_TOP_DIR}/library
elif test -d ${TCL_PREFIX}/lib/tcl${TCL_VERSION} -a -f ${TCL_PREFIX}/lib/tcl${TCL_VERSION}/init.tcl; then
    TCL_LIBRARY=${TCL_PREFIX}/lib/tcl${TCL_VERSION}
elif test -d ${TCL_PREFIX}/lib/tcl${TCL_VERSION} -a -f ${TCL_PREFIX}/lib/tcl${TCL_VERSION}/init.tcl; then
    TCL_LIBRARY=${TCL_PREFIX}/lib/tcl${TCL_VERSION}
else
    TCL_LIBRARY=$prefix/lib/tcl${TCL_VERSION}
fi
AC_SUBST(TCL_LIBRARY)

TCL_LIB_SPEC="-L${TCL_LIB_DIR} -l${TCL_BASE}"
TCL_STUB_LIB_SPEC="-L${TCL_LIB_DIR} -l${TCL_STUB_BASE}"
VERSION=""
eval "TCL_UNSHARED_LIB_FILE=lib${TCL_BASE}${TCL_UNSHARED_LIB_SUFFIX}"
eval "TCL_SHARED_LIB_FILE=lib${TCL_BASE}${TCL_SHARED_LIB_SUFFIX}"

#--------------------------------------------------------------------
LIB_INSTALL_DIR="${LIB_RUNTIME_DIR}"
#--------------------------------------------------------------------
#	The statements below define a collection of symbols related to
#	building libimg as a shared library instead of a static library.
#--------------------------------------------------------------------

TCL_SHARED_LIBS=""
#--------------------------------------------------------------------
AC_ARG_ENABLE(stubs, [  --disable-stubs         disable stub support for Img],
    [img_ok=$enableval], [img_ok=yes])
if test "$img_ok" != "no"; then
    TCL_DEFS="$TCL_DEFS -DUSE_TCL_STUBS"
    TCL_SHARED_LIBS="${TCL_STUB_LIB_SPEC}"
else
    case "$SHLIB_LD" in
	*ldAix*)
	TCL_SHARED_LIBS='${TCL_LIB_SPEC}'
	;;
    esac
fi

case "$SHLIB_LD" in
    *ldAix*)
    TCL_SHARED_LIBS="${TCL_SHARED_LIBS}"
    ;;
esac

AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PATH_PROG(AR,ar,/bin/true)
AC_PROG_CC
AC_PROG_CXX

AC_PATH_PROG(LATEX,latex,/bin/true)
AC_PATH_PROG(MAKEINDEX,makeindex,/bin/true)
AC_PATH_PROG(BIBTEX,bibtex,/bin/true)
AC_PATH_PROG(DVIPS,dvips,/bin/true)
AC_PATH_PROG(DVIDVI,dvidvi,/bin/true)
AC_PATH_PROG(PS2PDF,ps2pdf,/bin/true)
AC_PATH_PROG(DOCXX,doc++,/bin/true)
AC_PATH_PROG(SWIG,swig,/bin/true)
AC_PATH_PROG(FREEWRAP,freewrap,/bin/true)
AC_PATH_PROG(BISONXX,bison++,/bin/true)



dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/select.h)

AC_C_CONST
AC_TYPE_SIZE_T
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int)
AC_MSG_CHECKING([bool])
AC_LANG_SAVE
AC_LANG_CPLUSPLUS
AC_TRY_COMPILE(,[bool x,y;
x = true;
y = false;],[AC_DEFINE(HAVE_BOOL)
	     AC_MSG_RESULT(yes)],AC_MSG_RESULT(no))
AC_LANG_RESTORE



dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
dnl Substitutions...

AC_SUBST(CXX)
AC_SUBST(CXXFLAGS)
AC_SUBST(SHLIB_CFLAGS)
AC_SUBST(SHLIB_CXXFLAGS)
SHLIB_LD=`echo $SHLIB_LD|sed -e "s/${TCL_CC}/${CXX}/g"`
AC_SUBST(SHLIB_LD)
SHLIB_LD_LIBS=$TCL_SHLIB_LD_LIBS
AC_SUBST(SHLIB_LD_LIBS)
AC_SUBST(SHLIB_SUFFIX)
AC_SUBST(TCL_DBGX)
AC_SUBST(TCL_VERSION)
AC_SUBST(TCL_DEFS)
AC_SUBST(TCL_LIBS)
AC_SUBST(TCL_STUB_LIB_SPEC)
AC_SUBST(TCL_SHARED_LIBS)
AC_SUBST(TCL_SHARED_LIB_FILE)
AC_SUBST(TCL_UNSHARED_LIB_FILE)
AC_SUBST(TCL_SHLIB_CFLAGS)
AC_SUBST(TCL_SHLIB_SUFFIX)
TCL_SHLIB_LD=`echo $TCL_SHLIB_LD|sed -e "s/${TCL_CC}/${CXX}/g"`
AC_SUBST(TCL_SHLIB_LD)
AC_SUBST(TCL_PREFIX)
AC_SUBST(TCL_EXEC_PREFIX)
AC_SUBST(TCL_CFLAGS)
AC_SUBST(TCL_LIB_SPEC)
AC_SUBST(INSTALL)
AC_SUBST(INSTALL_PROGRAM)
AC_SUBST(INSTALL_DATA)
AC_SUBST(SYSTEMVERSION)
AC_SUBST(BISONXX)

AC_OUTPUT_COMMANDS([chmod +x Scripts/CameraScripts/AnyDistance.tcl])
AC_OUTPUT_COMMANDS([chmod +x Scripts/CameraScripts/Closest.tcl])
AC_OUTPUT_COMMANDS([chmod +x Doc/Support/tcl2tex.sh])

AC_OUTPUT(C++/FCFSupport/Makefile Doc/Internals/Makefile Doc/Makefile \
	  Doc/Support/tcl2tex.sh \
	  C++/Classes/Makefile Lib/Makefile BuildScripts/Makefile \
	  C++/Makefile Scripts/Dispatcher/Makefile Doc/Support/Makefile \
	  C++/Swig/Makefile C++/CMri/Makefile \
	  Scripts/FreightCarForwarder/Makefile \
	  Doc/User/Makefile C++/Parsers/Makefile Scripts/Common/Makefile \
	  Scripts/GRSupport/Makefile Scripts/TimeTable/Makefile \
	  Scripts/CameraScripts/Makefile Scripts/CameraScripts/AnyDistance.tcl \
	  Scripts/CameraScripts/Closest.tcl Scripts/Makefile Help/Makefile \
	  Installer/Makefile Makefile config_tcl.sed)
